# src/Controller/DeleteStudentController.php
@@ -3,17 +3,22 @@
 namespace App\Controller;
 
 use App\Controller\BaseController;
+use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpFoundation\Response;
 
 class DeleteStudentController extends BaseController
 {
-	public function __invoke()
-	{
-		$this->repository->delete($this->parameters['id']);
-		
-		if (json_last_error() !== 0) {
-			echo 'Erreur dans ton JSON';
-			http_response_code(400);
-			return;
-		}
-	}
+    public function __invoke()
+    {
+        $response = new JsonResponse();
+
+        try {
+            $this->repository->delete( $this->parameters['id'] );
+        } catch (\Exception $e) {
+            $response->setContent( $e->getMessage() );
+            $response->setStatusCode( 404);
+        }
+
+        return $response;
+    }
 }
